<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GOconnect</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="privacy_txt">Privacy</string>
    <string name="aboutus_txt">About Us</string>
    <string name="profile_title_txt">Profile</string>
    <string name="dashboard_txt">Dashboard</string>
    <string name="headmaster_name_txt">* Last name of your headmaster at graduation</string>
    <string name="listschollnames_txt">Select a College/Scholl/</string>
    <string name="name_txt">Name:</string>
    <string name="email_txt">Email:</string>
    <string name="topic_2_connect_txt">A topic of interest to connect with me on:</string>
    <string name="job_title_txt">Current job title:</string>
    <string name="org_name_txt">Organisation name:</string>
    <string name="required_field_txt">* Required field:</string>
    <string name="nxt_txt">Next</string>
    <string name="back_txt">Back</string>
    <string name="save_txt">Save</string>
    <string name="share_mode">ShareMode</string>
    <string name="shafe_mode">SafeMode</string>
    <string name="application_mode">Application Mode</string>
    <string name="select_proximity">Select Proximity For Notification</string>
    <string name="buzz">Buzz</string>
    <string name="max">10km</string>
    <string name="min">200m</string>
    <string name="settings_note">Sharemode: see and be seen\n
Safemode; you wont be seen and dont see others but you do get notifications that it is worthwhile to go to sharemode depending on your settting of proximity for notification</string>
    <string name="share">Share</string>
    <string name="check_net_connection">Please check your internet connection</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="action_logout">Logout</string>
    <string name="email_body">Please take this app for a spin with some people near you.(only Android 4 and up, sorry!)  Be aware that we will clear the database and you are only granted access for this short initial testing period
\n Download GOconnect app from the bellow link and install \n  <u><a href="www.link.com/">www.link.com</a></u>


      </string>

</resources>