<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bar_color_grey" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textSize="32sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <Button
            android:id="@+id/fb_login"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@drawable/login_with_facebook" />

        <TextView
            android:id="@+id/aboutus_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/fb_login"
            android:layout_marginTop="20sp"
            android:text= "@string/aboutus_txt"
            android:textColor="@color/title_text_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/privacy_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/fb_login"
            android:layout_marginTop="20sp"
            android:text="@string/privacy_txt"
            android:textColor="@color/title_text_color"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>