<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:background="@color/actionbar"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/profile_title_txt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_part_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <Spinner
            android:id="@+id/schollnames_spinner"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/dropdown"
            android:gravity="center"
            android:prompt="@string/listschollnames_txt" />

        <Spinner
            android:id="@+id/gradutaion_yr_spinner"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/dropdown"
            android:gravity="center"
            android:prompt="@string/listschollnames_txt" />

        <EditText
            android:id="@+id/headmaster_name"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textfield"
            android:hint="@string/headmaster_name_txt"
            android:inputType="textCapWords"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="13sp" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="80sp"
            android:layout_height="40sp"
            android:layout_gravity="right"
            android:layout_marginBottom="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="20sp"
            android:background="#FF4500"
            android:text="@string/nxt_txt" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/profile_part_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <com.goconnect.events.lib.CircularImageView
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/frame" />

                <!-- <com.goconnect.events.lib.CircularImageView
                     android:id="@+id/org_image"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerHorizontal="true"
                     android:layout_margin="10dp"
                     android:scaleType="fitCenter"
                     android:src="@drawable/frame"/>

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Add Company Logo"
                     android:layout_alignParentRight="true"
                     android:textStyle="bold"
                     android:layout_margin="10dp"
                     android:layout_below="@+id/org_image"
                     android:gravity="center"/>-->

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/name_txt" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/textfield"
                android:hint="@string/required_field_txt"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/email_txt" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/textfield"
                android:hint="@string/required_field_txt"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_topic_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/topic_2_connect_txt" />

            <EditText
                android:id="@+id/et_topic_2_connect"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/textfield"
                android:hint="@string/required_field_txt"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textSize="13sp" />


            <Button
                android:id="@+id/linked_in_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/linkedin_signin" />

            <TextView
                android:id="@+id/tv_job_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/job_title_txt" />

            <EditText
                android:id="@+id/et_job_title"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/textfield"
                android:hint="@string/required_field_txt"
                android:maxLength="50"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_org_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/org_name_txt" />

            <EditText
                android:id="@+id/et_org_name"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/textfield"
                android:hint="@string/required_field_txt"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textSize="13sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back_btn"
                    android:layout_width="80sp"
                    android:layout_height="40sp"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="20sp"
                    android:background="#FF4500"
                    android:text="@string/back_txt" />

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="80sp"
                    android:layout_height="40sp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_marginRight="20sp"
                    android:layout_marginTop="20sp"
                    android:background="#FF4500"
                    android:text="@string/save_txt" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>